--- a/warehouse-management-system/bin/src/main/resources/application.properties
+++ b/warehouse-management-system/bin/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.servlet.session.persistent=false
+#DB properties
+spring.datasource.url=jdbc:mysql://localhost:3306/warehouse?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Abhay@2012
+#JPA properties
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL8Dialect
+spring.jpa.open-in-view=false
 
