--- a/warehouse-management-system/src/main/resources/application.properties
+++ b/warehouse-management-system/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.password=Root@123
 #JPA properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL8Dialect
 spring.jpa.open-in-view=false
 
