--- a/warehouse-management-system/src/main/resources/application.properties
+++ b/warehouse-management-system/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.servlet.session.persistent=false
 #DB properties
 spring.datasource.url=jdbc:mysql://localhost:3306/warehouse?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Abhay@2012
+spring.datasource.password=Root@123
 #JPA properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
