--- a/warehouse-management-system/src/main/resources/application.properties
+++ b/warehouse-management-system/src/main/resources/application.properties
@@ -2,10 +2,7 @@ server.servlet.session.persistent=false
 #DB properties
 spring.datasource.url=jdbc:mysql://localhost:3306/warehouse?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-<<<<<<< HEAD
-spring.datasource.password=Abhay@2012
-=======
->>>>>>> 525653d46704368dde54fa4158a0a5787d85f271
+spring.datasource.password=root
 #JPA properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
